--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "type": "git",
     "url": "https://github.com/briangershon/exif-date-to-iso"
   },
+  "engines" : {
+    "npm" : ">3.0.0"
+  },
   "keywords": [
     "date",
     "exif",
