--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "pretest": "npm run build",
     "test": "mocha --compilers js:babel-register --require intelli-espower-loader $(find src -name '*.spec.js')",
     "posttest": "npm run lint",
-    "lint": "eslint src/**/*.js || true"
+    "lint": "eslint src/**/*.js || true",
+    "prepublish": "npm test",
+    "publish": "npm publish"
   },
   "repository": {
     "type": "git",
